# vernam-boosty-bot

./: README.md  pyproject.toml
commentsbot/: config.py  main.py
